--- a/frontend/src/components/Header/header.module.css
+++ b/frontend/src/components/Header/header.module.css
@@ -1,7 +1,8 @@
 .header {
   background-color: white;
   padding: 0;
-  border: 1px solid #e72929;
+  /* border: 1px solid #e72929; */
+  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
 }
 
 .header a {
@@ -18,6 +19,7 @@
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
@@ -43,10 +45,11 @@
   position: absolute;
   z-index: 1;
   background-color: whitesmoke;
-  /* display: none; */
   transition: all 0.5s ease;
   height: 0px;
   overflow: hidden;
+  border-radius: 10px;
+  top: calc(100% + 10px);
 }
 
 .menu_container:hover .menu {
@@ -65,4 +68,5 @@
   border-radius: 100rem;
   font-size: 0.9rem;
   color: white;
+  margin-left: 5px;
 }
